fixing queries for laptop and header on tablet

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -249,7 +249,7 @@ form button:hover {
         column-gap: 1em;
         align-items: start;
         justify-content: center;
-        width: 100%;
+        width: 100vw;
         margin: 30px auto;
     }
 
@@ -290,7 +290,7 @@ form button:hover {
         margin-left: 300px;
         justify-items: center;
         margin-bottom: 30px;
-        width: 100%;
+        width: 50%;
     }
 
     .contentContainer p {
@@ -304,7 +304,7 @@ form button:hover {
     .icon-container {
         width: 12vw;
         padding: 15px;
-        margin: 25px;
+        margin: 15px;
         border-radius: 15px;
         display: flex;
         flex-direction: column;
