--- a/docs/styles/nav-footer.css
+++ b/docs/styles/nav-footer.css
@@ -87,7 +87,7 @@ footer a:hover {
 /* Tablets */
 @media (min-width: 769px) and (max-width: 1400px) and (orientation: landscape) {
     .site-title {
-        font-size: 2.5rem;
+        font-size: 2rem;
         margin-left: 20px;
         text-align: left;
     }
@@ -103,7 +103,6 @@ footer a:hover {
         font-size: 1.5rem;
         justify-content: flex-end;
         flex-wrap: nowrap;
-
         width: 100%;
         gap: 10px;
     }
